# rotary-backend

backend/: .dockerignore  Dockerfile  dummy_data.sql  pyproject.toml  test.db
backend/src/api/: api.py  auth.py  members.py
backend/src/auth/: login.py
backend/src/database/: database.py  models.py
backend/src/events/: events.py  schemas.py
backend/src/financial/: schemas.py
backend/src/management/: management.py  schemas.py
backend/src/storage/: storage.py  upload.py
frontend/src/: App.tsx  style.css
frontend/src/components/: AdminNavbar.tsx  Card.tsx  Footer.tsx  MemberNavbar.tsx  Navbar.tsx  ProfileTab.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AboutPage.tsx  AdminDashboardPage.tsx  AdminEventsPage.tsx  AdminProjectsPage.tsx  HomePage.tsx  LoginPage.tsx  MemberDashboardPage.tsx  RegisterPage.tsx
